# internal_chat_mcp

./: .gitignore  Makefile  README.md  __init__.py  pyproject.toml  requirements.txt  server.py  server_sse.py  setup.sh  test_get_unread_messages.py
internal_chat_mcp/: __init__.py  models.py  server_sse.py  server_stdio.py
internal_chat_mcp/resources/: hello_world.py  user_profile.py
internal_chat_mcp/services/: resource_service.py  tool_service.py
internal_chat_mcp/tools/: __init__.py  date_difference.py  get_recent_messages.py  get_unread_messages.py  get_version.py  reverse_string.py  send_message.py  wait_for_message.py
resources/: __init__.py
tools/: __init__.py  current_time.py  get_unread_messages.py  random_number.py
