[project]
name = "internal_chat_mcp"
version = "0.2.8"
description = "internal_chat_mcp MCP server"
authors = [{ name = "Greg Lindberg", email = "greglindberg@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "mcp[cli]",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "uvicorn>=0.15.0",
    "websockets",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
internal-chat-mcp = "internal_chat_mcp.server:main" 