[project]
name = "internal_chat_mcp"
version = "0.2.7"
description = "internal_chat_mcp MCP server"
authors = [{ name = "Greg Lindberg", email = "greglindberg@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "mcp==1.9.4",
    "pydantic==2.11.7",
    "rich==14.0.0",
    "uvicorn==0.34.3",
    "websockets==15.0.1",
    "sqlalchemy==2.0.41",
    "aiosqlite==0.21.0",
    "alembic==1.16.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
internal-chat-mcp = "internal_chat_mcp.server:main" 